# queenbee

./: Cargo.toml  LICENSE.md  Readme.eng.md  Readme.md
src/: config.rs  deploy.rs  err.rs  executor.rs  lib.rs  main.rs
src/deploy/: command.rs  plan.rs  task.rs
testresource/: config.json  multiplecommands.json  testcommands.json  testplan.json  testtasks.json
