[package]
name = "queenbee"
version = "0.1.0"
authors = ["kid143"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
structopt = "0.3"
structopt-derive = "0.4"